# codex-sandbox

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_READINESS_REPORT.md  CODEOWNERS  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  labels.yml  release-please.yml  reviewdog.yml
docs/: architecture.md  feature_flags.md  index.md  observability.md  runbooks.md  secrets.md  tech_debt.md
scripts/: check_feature_flags.py  check_todos.py  validate_agents_md.py
skills/sample-skill/: SKILL.md
src/codex_sandbox/: __init__.py  feature_flags.py  observability.py
tests/: test_feature_flags.py  test_observability.py
tests/integration/: test_observability_integration.py
